Emboss text, offset below edge, fix aperture z-index

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    z-index: 1;
+    z-index: 15;
     will-change: transform;
 }
 
